--- a/create_df_cgm_data.ipynb
+++ b/create_df_cgm_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "d182842d-7b30-42e3-8217-53a6e5cb25d9",
    "metadata": {
     "tags": []
@@ -19,6 +19,7 @@
    "source": [
     "import json\n",
     "from datetime import datetime, timedelta\n",
+    "from calculate_cgm_features import compute_spike_metrics, get_aligned_df\n",
     "\n",
     "import matplotlib.dates as mdates  # to use ConciseDateFormatter\n",
     "import matplotlib.pyplot as plt  # to make plots\n",
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "729aa5c5-cfcf-43c0-9363-cd1ff45b2fc2",
    "metadata": {},
    "outputs": [],
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "0307107f-df2d-468d-b85c-c89a7a2e05c9",
    "metadata": {},
    "outputs": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "0a65ea2c-ad93-461a-9043-e14c06c885ad",
    "metadata": {},
    "outputs": [
@@ -82,7 +83,7 @@
        "1049"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "2bcdd878-0285-4786-b5a1-62fa67ef472d",
    "metadata": {},
    "outputs": [
@@ -150,7 +151,7 @@
        "1                                     11  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "cb9881a3-84b7-42af-99ab-0517498225a9",
    "metadata": {},
    "outputs": [],
@@ -202,161 +203,12 @@
     "def get_glucose_list(df):\n",
     "   lst = df[\"blood_glucose_value\"].to_numpy()\n",
     "   return lst\n",
-    "\n",
-    "def _detect_spikes_with_resolution(times, values, window=18, threshold=30, require_resolved=True):\n",
-    "    \"\"\"\n",
-    "    Detect spikes and compute resolution. Optionally require the spike to resolve.\n",
-    "    Resolution = time from peak to first time value <= baseline + 0.5*amplitude.\n",
-    "    Baseline = max(left_min, right_min) over `window` samples on each side.\n",
-    "    \"\"\"\n",
-    "    n = len(values)\n",
-    "    out = []\n",
-    "\n",
-    "    for i in range(window, n - window):\n",
-    "        vi = values[i]\n",
-    "        if vi > values[i-1] and vi > values[i+1]:  # local max\n",
-    "            left_min  = float(np.min(values[i-window:i]))\n",
-    "            right_min = float(np.min(values[i+1:i+1+window]))\n",
-    "            baseline  = max(left_min, right_min)\n",
-    "            amp = float(vi - baseline)\n",
-    "            if amp >= threshold:\n",
-    "                half_target = baseline + 0.5 * amp\n",
-    "\n",
-    "                # scan forward to find first crossing\n",
-    "                hit_idx = None\n",
-    "                for j in range(i+1, n):\n",
-    "                    if values[j] <= half_target:\n",
-    "                        hit_idx = j\n",
-    "                        break\n",
-    "\n",
-    "                if hit_idx is None and require_resolved:\n",
-    "                    continue  # skip unresolved spikes entirely\n",
-    "\n",
-    "                if hit_idx is not None and pd.notna(times.iloc[i]) and pd.notna(times.iloc[hit_idx]):\n",
-    "                    dt = times.iloc[hit_idx] - times.iloc[i]\n",
-    "                    dt_min = dt.total_seconds() / 60.0\n",
-    "                else:\n",
-    "                    dt = pd.NaT\n",
-    "                    dt_min = np.nan\n",
-    "\n",
-    "                out.append({\n",
-    "                    \"peak_idx\": i,\n",
-    "                    \"peak_time\": times.iloc[i],\n",
-    "                    \"peak_value\": float(vi),\n",
-    "                    \"baseline\": float(baseline),\n",
-    "                    \"amplitude\": float(amp),\n",
-    "                    \"half_target\": float(half_target),\n",
-    "                    \"resolution_timedelta\": dt,\n",
-    "                    \"resolution_minutes\": dt_min,\n",
-    "                })\n",
-    "\n",
-    "    return pd.DataFrame(out)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "6068de7b-511b-4f80-b15a-576d5172662e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Code to compute the spike metrics based on the nature paper https://www.nature.com/articles/s41591-025-03849-7\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "def compute_spike_metrics(\n",
-    "    df,\n",
-    "    time_col=\"start_dtime\",\n",
-    "    value_col=\"blood_glucose_value\",\n",
-    "    window=18,\n",
-    "    threshold=30,\n",
-    "):\n",
-    "    \"\"\"\n",
-    "    Computes:\n",
-    "      - avg_spike_resolution_min: mean time (min) to absorb 50% of each spike (resolved spikes only)\n",
-    "      - expected_daily_spikes: mean spikes/day (resolved spikes only)\n",
-    "      - mean_glucose: mean glucose over entire tracking period\n",
-    "      - expected_max_spike_relative_value: avg over days of (daily_max - baseline)/baseline,\n",
-    "        baseline = overall mean glucose\n",
-    "      - hyper_time_pct: % of readings > 150 mg/dL\n",
-    "      - nocturnal_hypoglycemia: avg over days of the minimum glucose between 00:00 and 07:00\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Prepare time series\n",
-    "    s = df.copy()\n",
-    "    s[time_col] = pd.to_datetime(s[time_col], errors=\"coerce\")\n",
-    "    s = s.dropna(subset=[time_col]).sort_values(time_col).reset_index(drop=True)\n",
-    "\n",
-    "    if s.empty:\n",
-    "        return {\n",
-    "            \"avg_spike_resolution_min\": np.nan,\n",
-    "            \"expected_daily_spikes\": np.nan,\n",
-    "            \"mean_glucose\": np.nan,\n",
-    "            \"expected_max_spike_relative_value\": np.nan,\n",
-    "            \"hyper_time_pct\": np.nan,\n",
-    "            \"nocturnal_hypoglycemia\": np.nan\n",
-    "        }\n",
-    "\n",
-    "    times = s[time_col]\n",
-    "    values = s[value_col].to_numpy()\n",
-    "\n",
-    "    # ---- Spike metrics ----\n",
-    "    spike_df = _detect_spikes_with_resolution(\n",
-    "        times=times,\n",
-    "        values=values,\n",
-    "        window=window,\n",
-    "        threshold=threshold,\n",
-    "        require_resolved=True,\n",
-    "    )\n",
-    "    if not spike_df.empty:\n",
-    "        spike_df = spike_df.dropna(\n",
-    "            subset=[\"peak_time\", \"resolution_minutes\", \"resolution_timedelta\"]\n",
-    "        )\n",
-    "        spike_df = spike_df[np.isfinite(spike_df[\"resolution_minutes\"])]\n",
-    "\n",
-    "    if not spike_df.empty:\n",
-    "        avg_spike_resolution_min = float(spike_df[\"resolution_minutes\"].mean())\n",
-    "        spike_times = spike_df[\"peak_time\"]\n",
-    "        spikes_per_day = spike_times.groupby(spike_times.dt.date).count()\n",
-    "        expected_daily_spikes = float(spikes_per_day.mean()) if not spikes_per_day.empty else np.nan\n",
-    "    else:\n",
-    "        avg_spike_resolution_min = np.nan\n",
-    "        expected_daily_spikes = np.nan\n",
-    "\n",
-    "    # ---- Global glucose metrics ----\n",
-    "    mean_glucose = float(s[value_col].mean())\n",
-    "    hyper_time_pct = float((s[value_col] > 150).mean() * 100.0)\n",
-    "\n",
-    "    # Expected maximum spike relative value, baseline = overall mean\n",
-    "    baseline = mean_glucose\n",
-    "    if np.isfinite(baseline) and baseline != 0.0:\n",
-    "        daily_max = s.groupby(times.dt.date)[value_col].max()\n",
-    "        expected_max_spike_relative_value = float(((daily_max - baseline) / baseline).mean())\n",
-    "    else:\n",
-    "        expected_max_spike_relative_value = np.nan\n",
-    "\n",
-    "    # ---- Nocturnal hypoglycemia: avg(min between 00:00 and 07:00) across days ----\n",
-    "    nocturnal_mask = times.dt.hour.between(0, 6)  # 00:00–06:59\n",
-    "    nocturnal = s.loc[nocturnal_mask, [time_col, value_col]]\n",
-    "    if not nocturnal.empty:\n",
-    "        nocturnal_min_per_day = nocturnal.groupby(nocturnal[time_col].dt.date)[value_col].min()\n",
-    "        nocturnal_hypoglycemia = float(nocturnal_min_per_day.mean()) if not nocturnal_min_per_day.empty else np.nan\n",
-    "    else:\n",
-    "        nocturnal_hypoglycemia = np.nan\n",
-    "\n",
-    "    return {\n",
-    "        \"avg_spike_resolution_min\": avg_spike_resolution_min,\n",
-    "        \"expected_daily_spikes\": expected_daily_spikes,\n",
-    "        \"mean_glucose\": mean_glucose,\n",
-    "        \"expected_max_spike_relative_value\": expected_max_spike_relative_value,  # unitless ratio\n",
-    "        \"hyper_time_pct\": hyper_time_pct,\n",
-    "        \"nocturnal_hypoglycemia\": nocturnal_hypoglycemia\n",
-    "    }\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "da7c3352-52e4-4744-868a-c40027d8002b",
    "metadata": {
     "scrolled": true
@@ -401,7 +253,8 @@
     "        },\n",
     "        inplace=True,)\n",
     "        df[\"start_dtime\"] = df.apply(lambda row: convert_time_string_to_datetime(row[\"start_time\"]), axis=1)\n",
-    "        # Clip the values\n",
+    "        #df = get_aligned_df(df, time_col=\"start_time\")\n",
+    "# Clip the values\n",
     "        mask_bg_int_only = ~df[\"blood_glucose_value\"].isin([\"Low\", \"High\"])\n",
     "        bg_min = df[mask_bg_int_only][\"blood_glucose_value\"].min()\n",
     "        bg_max = df[mask_bg_int_only][\"blood_glucose_value\"].max()\n",
@@ -444,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "91e9f72a-06b8-46d1-8d06-cf5c90eac821",
    "metadata": {},
    "outputs": [
@@ -503,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "9c1a118f-bfc4-4699-9050-471bde225801",
    "metadata": {},
    "outputs": [
@@ -582,18 +435,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "5b980dae-d429-4089-b3a5-b669a19f38e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe_with_glucose_values.to_pickle(r\"dataframe_with_glucose_info.pkl\")"
+    "dataframe_with_glucose_values.to_pickle(r\"dataframe_with_glucose_info.pkl\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c1466709-1559-40d5-887e-bc333ead1a46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>participant_id</th>\n",
+       "      <th>spike_resolutions</th>\n",
+       "      <th>expected_daily_spikes</th>\n",
+       "      <th>mean_glucose</th>\n",
+       "      <th>relative_spikes</th>\n",
+       "      <th>hyper_time_pcts</th>\n",
+       "      <th>nocturnal_hypoglycemias</th>\n",
+       "      <th>recommended_split</th>\n",
+       "      <th>study_group_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>30.131579</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>123.302871</td>\n",
+       "      <td>0.391990</td>\n",
+       "      <td>8.333333</td>\n",
+       "      <td>106.7</td>\n",
+       "      <td>train</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>29.318182</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>106.862518</td>\n",
+       "      <td>0.317751</td>\n",
+       "      <td>9.423347</td>\n",
+       "      <td>86.7</td>\n",
+       "      <td>train</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>42.166667</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>209.019258</td>\n",
+       "      <td>0.444408</td>\n",
+       "      <td>93.662465</td>\n",
+       "      <td>175.5</td>\n",
+       "      <td>train</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1004</td>\n",
+       "      <td>33.859649</td>\n",
+       "      <td>5.70</td>\n",
+       "      <td>188.659664</td>\n",
+       "      <td>0.407537</td>\n",
+       "      <td>90.581232</td>\n",
+       "      <td>153.1</td>\n",
+       "      <td>val</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1005</td>\n",
+       "      <td>36.200000</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>275.486695</td>\n",
+       "      <td>0.405447</td>\n",
+       "      <td>97.163866</td>\n",
+       "      <td>183.6</td>\n",
+       "      <td>val</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   participant_id  spike_resolutions  expected_daily_spikes  mean_glucose  \\\n",
+       "0            1001          30.131579                   3.80    123.302871   \n",
+       "1            1002          29.318182                   2.75    106.862518   \n",
+       "2            1003          42.166667                   3.00    209.019258   \n",
+       "3            1004          33.859649                   5.70    188.659664   \n",
+       "4            1005          36.200000                   2.50    275.486695   \n",
+       "\n",
+       "   relative_spikes  hyper_time_pcts  nocturnal_hypoglycemias  \\\n",
+       "0         0.391990         8.333333                    106.7   \n",
+       "1         0.317751         9.423347                     86.7   \n",
+       "2         0.444408        93.662465                    175.5   \n",
+       "3         0.407537        90.581232                    153.1   \n",
+       "4         0.405447        97.163866                    183.6   \n",
+       "\n",
+       "  recommended_split  study_group_id  \n",
+       "0             train               1  \n",
+       "1             train               0  \n",
+       "2             train               2  \n",
+       "3               val               2  \n",
+       "4               val               3  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe_with_glucose_values=pd.read_pickle(r\"dataframe_with_glucose_info.pkl\")\n",
+    "\n",
+    "dataframe_with_glucose_values.drop(columns=['Glucose Lists'], inplace=True)\n",
+    "dataframe_with_glucose_values.rename(columns={'patient_ids': 'participant_id'}, inplace=True)\n",
+    "dataframe_with_glucose_values.to_csv(r\"dataframe_glucose_feats.csv\")\n",
+    "dataframe_with_glucose_values.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1466709-1559-40d5-887e-bc333ead1a46",
+   "id": "1e0de9b3-386f-45df-87e9-af24fe3eafed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -615,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
